# yugabyte-db

./: .arcconfig  .arclint  .asf.yaml  .clang-format  .clang-tidy  .editorconfig  .env_sample  .fossa-local.yml  .fossa-platform.yml  .fossa.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lint  .travis.yml  .ycm_extra_conf.py  11  2.12_diff.patch  AGENTS.md  BUILD_INSTRUCTIONS_RHEL_PPC64LE.md  CHANGELOG  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.adoc  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  COPYRIGHT.orafce  COPYRIGHT.postgresql  Cargo.toml  Changes  DEFINE_UNKNOWN_to_NON_RUNTIME_rationale.md  DISCLAIMER  DISCLAIMER-WIP  Dockerfile  Doxyfile  EULA.md  (+367 more)
build-support/tools/kudu-lint/: .gitignore  CMakeLists.txt  README  kudu-lint.cc
src/cpp_redis/: CMakeLists.txt  LICENSE  install_deps.sh
src/cpp_redis/examples/: CMakeLists.txt  redis_subscriber.cpp
src/cpp_redis/sources/: redis_client.cpp  redis_subscriber.cpp  reply.cpp
src/cpp_redis/tests/: CMakeLists.txt
src/kudu/benchmarks/: CMakeLists.txt  rle.cc  wal_hiccup-parser.py  wal_hiccup.cc  yb_load_test_tool.cc  ycsb-schema.h
src/kudu/cfile/: CMakeLists.txt  binary_dict_block.cc  binary_dict_block.h  binary_plain_block.cc  binary_plain_block.h  binary_prefix_block.cc  binary_prefix_block.h  block_cache-test.cc  block_cache.cc  block_cache.h  block_compression.cc  block_compression.h  block_encodings.h  block_handle.h  block_pointer.h  bloomfile-test-base.h  bloomfile-test.cc  bloomfile.cc  bloomfile.h  bshuf_block.cc  bshuf_block.h  cfile-dump.cc  cfile-test-base.h  cfile-test.cc  cfile.proto  cfile_reader.cc  cfile_reader.h  cfile_util.cc  cfile_util.h  cfile_writer.cc  cfile_writer.h  compression-test.cc  compression_codec.cc  compression_codec.h  encoding-test.cc  gvint_block.cc  gvint_block.h  index-test.cc  index_block.cc  index_block.h  (+8 more)
src/kudu/client/: CMakeLists.txt  MungeExportedInstallTargets.cmake  batcher.cc  batcher.h  callbacks.h  client-internal.cc  client-internal.h  client-test-util.cc  client-test-util.h  client-test.cc  client-unittest.cc  client.cc  client.h  client_builder-internal.cc  client_builder-internal.h  client_symbol-test.sh  error-internal.cc  error-internal.h  error_collector.cc  error_collector.h  meta_cache.cc  meta_cache.h  row_result.h  scan_batch.cc  scan_batch.h  scan_predicate-internal.h  scan_predicate.cc  scan_predicate.h  scanner-internal.cc  scanner-internal.h  schema-internal.h  schema.cc  schema.h  session-internal.cc  session-internal.h  shared_ptr.h  symbols.map  table-internal.cc  table-internal.h  table_alterer-internal.cc  (+11 more)
src/kudu/consensus/: CMakeLists.txt  consensus-test-util.h  consensus.cc  consensus.h  consensus.proto  consensus.txt  consensus_meta-test.cc  consensus_meta.cc  consensus_meta.h  consensus_peers-test.cc  consensus_peers.cc  consensus_peers.h  consensus_queue-test.cc  consensus_queue.cc  consensus_queue.h  leader_election-test.cc  leader_election.cc  leader_election.h  local_consensus.cc  local_consensus.h  log-dump.cc  log-test-base.h  log-test.cc  log.cc  log.h  log.proto  log_anchor_registry-test.cc  log_anchor_registry.cc  log_anchor_registry.h  log_cache-test.cc  log_cache.cc  log_cache.h  log_index-test.cc  log_index.cc  log_index.h  log_metrics.cc  log_metrics.h  log_reader.cc  log_reader.h  log_util.cc  (+18 more)
src/kudu/rpc/: CMakeLists.txt  acceptor_pool.cc  acceptor_pool.h  auth_store.cc  auth_store.h  blocking_ops.cc  connection.cc  connection.h  constants.cc  inbound_call.cc  inbound_call.h  messenger.cc  messenger.h  mt-rpc-test.cc  negotiation.cc  negotiation.h  outbound_call.cc  outbound_call.h  protoc-gen-krpc.cc  proxy.cc  proxy.h  reactor-test.cc  reactor.cc  reactor.h  remote_method.cc  remote_method.h  rpc-bench.cc  rpc-test-base.h  rpc-test.cc  rpc.cc  rpc.h  rpc_context.cc  rpc_context.h  rpc_controller.cc  rpc_controller.h  rpc_introspection.proto  rpc_service.h  rpc_sidecar.h  rpc_stub-test.cc  rtest.proto  (+18 more)
src/kudu/tablet/: CMakeLists.txt  cbtree-test.cc  cfile_set-test.cc  cfile_set.cc  cfile_set.h  compaction-policy.txt  compaction-test.cc  compaction.cc  compaction.h  compaction_policy-test.cc  compaction_policy.cc  compaction_policy.h  composite-pushdown-test.cc  concurrent_btree.h  delta_applier.cc  delta_applier.h  delta_compaction-test.cc  delta_compaction.cc  delta_compaction.h  delta_iterator_merger.cc  delta_iterator_merger.h  delta_key.cc  delta_key.h  delta_stats.cc  delta_stats.h  delta_store.cc  delta_store.h  delta_tracker.cc  delta_tracker.h  deltafile-test.cc  deltafile.cc  deltafile.h  deltamemstore-test.cc  deltamemstore.cc  deltamemstore.h  diskrowset-test-base.h  diskrowset-test.cc  diskrowset.cc  diskrowset.h  local_tablet_writer.h  (+64 more)
src/kudu/tools/: CMakeLists.txt  README.systemtap  create-demo-table.cc  data_gen_util.cc  fs_dump-tool.cc  fs_list-tool.cc  fs_tool.cc  fs_tool.h  insert-generated-rows.cc  ksck-test.cc  ksck.cc  ksck.h  ksck_remote-test.cc  ksck_remote.cc  ksck_remote.h  kudu-admin-test.cc  kudu-admin.cc  kudu-ksck.cc  kudu-ts-cli-test.cc  pbc-dump.cc  ts-cli.cc
src/kudu/tserver/: CMakeLists.txt  heartbeater.cc  heartbeater.h  mini_tablet_server.cc  mini_tablet_server.h  remote_bootstrap-test-base.h  remote_bootstrap.proto  remote_bootstrap_client-test.cc  remote_bootstrap_client.cc  remote_bootstrap_client.h  remote_bootstrap_service-test.cc  remote_bootstrap_service.cc  remote_bootstrap_service.h  remote_bootstrap_session-test.cc  remote_bootstrap_session.cc  remote_bootstrap_session.h  scanner_metrics.cc  scanner_metrics.h  scanners-test.cc  scanners.cc  scanners.h  tablet_peer_lookup.h  tablet_server-stress-test.cc  tablet_server-test-base.h  tablet_server-test.cc  (+17 more)
src/odyssey/: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  cleanup-docker.sh  docker-compose-test.yml  docker-compose.yml  odyssey.conf  tsan-decoder
src/rocksdb/: .gitignore  AUTHORS  CMakeLists.txt  HISTORY.md  Makefile  appveyor.yml  build-rocksdb.sh  gen_build_version.py  gen_rocksdb_build_version.py  precompiled_header.h
(+60841 files in other folders)
